production issue fixed

--- a/src/main/resources/templates/registation.html
+++ b/src/main/resources/templates/registation.html
@@ -15,7 +15,7 @@
 
             
            <form 
-                data-th-action="@{'/do-register'}" 
+                data-th-action="@{'https://user-registration-system-production.up.railway.app/do-register'}" 
                 method="post"  
                 data-th-object="${userform}"
                 novalidate
